src/test/test-models/bad/err-decl-matrix.stan
data {
  matrix[3] y;
}
model {
}
